<resources>
    <string name="app_name">Coverage Quality Detector</string>
    <string name="showmap_button">Show Map</string>
    <string name="listoflocations_button">HISTORY</string>
    <string name="sign_up_button">SIGN UP</string>
    <string name="sign_in_button">SIGN IN</string>
    <string name="username_text_view">Username</string>
    <string name="password_text_view">Password</string>
    <string name="empty_information_warning">Fill all the fields</string>
    <string name="surname_text_field">Surname</string>
    <string name="name_text_field">Name</string>
    <string name="title_activity_location_map">Map</string>
</resources>
