<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.azadyasar.coveragequalitydetector.SignUpActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_text_field"
            android:textSize="20sp"
            android:id="@+id/name_header"
            android:layout_alignBottom="@+id/name_edit_text"
            android:paddingRight="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/name_edit_text"
            android:layout_toRightOf="@+id/name_header"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/surname_text_field"
            android:textSize="20sp"
            android:id="@+id/surname_header"
            android:layout_alignBottom="@+id/surname_edit_text"
            android:paddingRight="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/surname_edit_text"
            android:layout_toRightOf="@+id/surname_header"/>

    </RelativeLayout>




    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username_text_view"
            android:textSize="20sp"
            android:id="@+id/username_header"
            android:layout_alignBottom="@+id/username_edit_text"
            android:paddingRight="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/username_edit_text"
            android:layout_toRightOf="@+id/username_header"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_text_view"
            android:textSize="20sp"
            android:id="@+id/password_header"
            android:layout_alignBottom="@+id/password_edit_text"
            android:paddingRight="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/password_edit_text"
            android:layout_toRightOf="@+id/password_header"/>

    </RelativeLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SUBMIT"
        android:padding="25dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/submit_button"
        android:background="#e8edae"/>

</LinearLayout>
